<resources>
    <string name="app_name">TunProxy</string>

    <!-- Main Activity -->
    <string name="notify_title">Proxy is running</string>
    <string name="notify_msg">Proxy is running</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="msg_start_failed">Start failed</string>
    <string name="host_hint">Proxy address (host:port)</string>
    <string name="enter_host">Enter valid address and port</string>

    <!-- Main menu -->
    <string name="title_show_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_profile_settings">Profile Settings</string>

    <!-- Category -->
    <string name="menu_search">Search</string>
    <string name="menu_show_system_app">show system app</string>
    <string name="menu_sort_by">sort by</string>
    <string name="menu_app_name">app name</string>
    <string name="menu_package_name">package name</string>
    <string name="menu_order_by">order by</string>
    <string name="menu_order_by_asc">ascending</string>
    <string name="menu_order_by_desc">descending</string>
    <string name="menu_filter_by">filter by</string>
    <string name="loading">Please wait</string>
    <string name="progress">Progress</string>

    <!-- VPN Setting -->
    <string name="vpn_connection_setting">VPN connection setting</string>

    <string name="vpn_connection_mode">Allowed / Disallowed Application</string>
    <string name="vpn_allowed_application_list">Allowed application list</string>
    <string name="vpn_allowed_application_count">selected application count: </string>
    <string name="vpn_disallowed_application_list">Disallowed application list</string>
    <string name="vpn_disallowed_application_count">selected application count: </string>
    <string name="vpn_clear_all_selection">Clear all selection</string>
    <string name="vpn_dialog_clear_all_application_msg">Clear all selections of Allowed / Disallowed application list</string>

    <string-array name="pref_vpn_connection_name">
        <item>Disallowed Application</item>
        <item>Allowed Application</item>
    </string-array>
    <string-array name="pref_vpn_connection_value">
        <item>DISALLOW</item>
        <item>ALLOW</item>
    </string-array>

    <!-- Proxy Label -->
    <string name="proxy_profile">Proxy select profile</string>
    <string name="proxy_address">Proxy address</string>
    <string name="proxy_protocol">Proxy protocol</string>
    <string name="proxy_auth_method">Authentication method</string>

    <!-- Proxy Setting -->
    <string name="proxy_setting">Proxy Setting</string>
    <string name="pref_connectivity_check">Connectivity Check</string>
    <string name="pref_connectivity_check_summary">Check proxy connectivity before starting</string>
    <string-array name="proxy_types">
        <item>HTTP</item>
        <item>SOCKS5</item>
        <item>SOCKS4</item>
    </string-array>

    <!-- Proxy Authentication -->
    <string-array name="auth_methods">
        <item>None</item>
        <item>Username/Password</item>
    </string-array>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_error_username">Please enter username</string>
    <string name="auth_error_length">Username and password must be 255 bytes or less</string>
    <string name="profile_item_auth">%1$s (Auth)</string>

    <!-- DNS Setting -->
    <string name="dns_setting">DNS Setting</string>
    <string name="dns_use_custom">Use Custom DNS</string>
    <string name="dns_use_custom_summary">Enable to specify custom DNS servers</string>
    <string name="dns_primary">Primary DNS</string>
    <string name="dns_secondary">Secondary DNS</string>
    <string name="dns_google_primary">8.8.8.8</string>
    <string name="dns_google_secondary">8.8.4.4</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_host_port">Host:Port</string>

    <!-- Profile Setting -->
    <string name="profile_manual">Manual</string>
    <string name="profile_name_hint">Profile Name</string>
    <string name="profile_delete_title">Delete Profile</string>
    <string name="profile_delete_msg">Are you sure you want to delete this profile?</string>
    <string name="profile_new">New</string>
    <string name="profile_new_title">New Profile</string>
    <string name="profile_edit_title">Edit Profile</string>
    <string name="profile_error_name_fields">Please enter name fields</string>
    <string name="profile_error_format">Invalid Host:Port format</string>
    <string name="profile_error_port">Invalid port number(0 &gt;= port &gt;= 65536)</string>
    <string name="profile_item_edit">Edit</string>
    <string name="profile_item_delete">Delete</string>
    <string name="menu_profile_settings">Profile Settings</string>
    <string name="invalid_ip_address">Invalid IP Address</string>

</resources>
